# autonumerics_zero

./: MODULE.bazel  README.md  requirements.in  requirements_lock.txt
evolution/lib/: BUILD.bazel  candidate.cc  candidate.h  current_time.cc  current_time.h  deconstructed.cc  deconstructed.h  experiment_spec.proto  fitnesses_reduction.cc  fitnesses_reduction.h  fitnesses_reduction_spec.proto  hashing.cc  hashing.h  id_generator.cc  id_generator.h  individual.proto  individuals_writer.h  meta_validation.proto  mocking.h  nsga2_search_algorithm.cc  nsga2_search_algorithm.h  nsga2_search_algorithm_spec.proto  nsga2_search_algorithm_state.proto  nsga2_util.cc  nsga2_util.h  pastable.cc  pastable.h  population_client.cc  population_client.h  population_client_manager.cc  population_client_manager.h  population_client_manager_spec.proto  population_client_spec.proto  population_server.cc  population_server.h  population_server.proto  population_server_search_algorithms.cc  population_server_search_algorithms.h  population_server_spec.proto  printing.h  (+16 more)
evolution/lib/python/: BUILD.bazel  deconstructed.cc  experiment_snapshots_parsing.py  experiment_spec_util.py  hashing.cc  log_tracker.py  pastable.cc  population_client_manager.cc  printing.py  rng.cc  timed_measurement.py  types.py
evolution/projects/graphs/: BUILD.bazel  evaluator_interface.py  generators.py  generators_spec.proto  graph.py  graph_evolver.py  graph_evolver_spec.proto  graph_manipulation.py  graph_spec.proto  graph_transformer.py  graph_transformer_spec.proto  hasher_interface.py  learnable_params.py  meta_validator_interface.py  metadata_util.py  mutators.py  mutators_spec.proto  op.py  topology.py  type.py
evolution/projects/graphs/joy/: BUILD.bazel  baselines.py  bfloat16_util.py  cma_trainer.py  cma_trainer_spec.proto  constant_vertex_collapser.py  constant_vertex_collapser_spec.proto  conversions.py  cost_estimator.py  cost_estimator_impl.py  cost_estimator_spec.proto  custom_mutators.py  custom_mutators_spec.proto  data.proto  data.py  dataset.py  dataset_spec.proto  early_stopping.py  early_stopping_spec.proto  embed_wall_clock_cost_estimator_spec.proto  error_util.proto  error_util.py  eval_metadata.proto  eval_metadata.py  evaluator.py  evaluator_spec.proto  evaluator_util.proto  evaluator_util.py  fingerprinter.py  fingerprinter_spec.proto  float80_ground_truth.cc  float80_ground_truth.h  graph_examples.py  ground_truth.py  ground_truth_spec.proto  interpretation.py  jax_dataset.py  jax_dataset_spec.proto  joy_worker_spec.proto  local_config_open_sourcing.textproto  (+31 more)
evolution/projects/graphs/joy/python/: BUILD.bazel  float80_ground_truth.cc
